@@ -1292,6 +1292,9 @@ void Fl_Window::hide() {
 
 Fl_Window::~Fl_Window() {
   hide();
+  if (xclass_) {
+    free(xclass_);
+  }
 }
 
 // FL_SHOW and FL_HIDE are called whenever the visibility of this widget
